# Network-Knowledge-Assessment

./: .gitignore  CMakeLists.txt  Doxyfile  QUIZ_USAGE.md  README.md
deploy/: README_rsyslog.md  logrotate-mydaemon  rsyslog-mydaemon.conf
doc/: PROJECT_DOCUMENTATION.md  README_DOCS.md  Zalozenia_Projektowe.md  custom.css  diagrams.puml  generate_diagrams.sh  protocol.md
include/: client_utils.h  deamon_init.h  menu.h  multicast_discovery.h  quiz.h  server_types.h  server_utils.h  sock_options.h  tlv.h
resources/: questions.json
src/: client.c  client_utils.c  deamon_init.c  menu.c  multicast_discovery.c  options.c  quiz.c  server.c  server_utils.c  sock_options.c  tlv.c
